objects/ASI_TH_CRM_Estimated_Spending__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TH_CRM_Activity_Cash__c</fullName>
        <label>Activity - Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Activity_FOC__c</fullName>
        <label>Activity - FOC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Contract_Status__c</fullName>
        <formula>TEXT( ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Estimated Spendings</relationshipLabel>
        <relationshipName>ASI_TH_CRM_ES_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Estimated_Spending_EXID__c</fullName>
        <externalId>true</externalId>
        <label>Estimated Spending External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Fund_Advance__c</fullName>
        <label>Fund - Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Fund_Cash__c</fullName>
        <label>Fund - Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Fund_FOC__c</fullName>
        <label>Fund - FOC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Fund_Rebate__c</fullName>
        <label>Fund - Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <label>Estimated Spending</label>
    <nameField>
        <label>Period</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimated Spendings</pluralLabel>
    <recordTypes>
        <fullName>ASI_TH_CRM_Estimated_Spending</fullName>
        <active>true</active>
        <label>ASI TH CRM Estimated Spending</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASI_TH_CRM_Cannot_Modify_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c, &apos;Freeze&apos;),
ISCHANGED( ASI_TH_CRM_Date__c ) = true, 
NOT(CONTAINS($UserRole.DeveloperName,&apos;Commercial_Analyst&apos;)), 
NOT( CONTAINS( $Profile.Name, &apos;System Admin&apos;)))</errorConditionFormula>
        <errorMessage>Cannot Change Estimated Spending Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TH_CRM_EstimatedSpendingLocked</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISCHANGED(ASI_TH_CRM_Locked__c)) , 
ASI_TH_CRM_Locked__c = true, 
NOT(CONTAINS($UserRole.DeveloperName,&apos;Commercial_Analyst&apos;)), 
NOT( CONTAINS( $Profile.Name, &apos;System Admin&apos;)))</errorConditionFormula>
        <errorMessage>The Estimated Spending record is locked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TH_CRM_EstimatedSpendingUpdate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	OR(TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) = &apos;Final&apos;,
		AND(TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) = &apos;Editing&apos;,
			NOT(CONTAINS($UserRole.DeveloperName,&apos;Commercial_Analyst&apos;)),
			NOT(CONTAINS($UserRole.DeveloperName,&apos;Sales_Co&apos;))),
		AND(TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) = &apos;Freeze&apos;,
			NOT(CONTAINS($UserRole.DeveloperName,&apos;Commercial_Analyst&apos;)),
			NOT(CONTAINS($UserRole.DeveloperName,&apos;Sales_Co&apos;)),
			NOT(CONTAINS($UserRole.DeveloperName,&apos;CDP&apos;)),
			NOT(CONTAINS($UserRole.DeveloperName,&apos;Finance&apos;)),
                        NOT(CONTAINS( $Profile.Name ,&apos;System Admin&apos;)))
           ),
NOT(CONTAINS($UserRole.DeveloperName, &apos;System_Admin&apos;))
)</errorConditionFormula>
        <errorMessage>Estimated Spending can only be edited when Contract Status is Freeze.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_TH_CRM_FundAdvanceReadOnly</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) &lt;&gt; &apos;Editing&apos;,
TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) &lt;&gt; &apos;Freeze&apos;,
ISCHANGED( ASI_TH_CRM_Fund_Advance__c),
NOT(CONTAINS( $UserRole.DeveloperName ,&apos;Sales_Co&apos;)),
NOT(CONTAINS($UserRole.DeveloperName,&apos;Commercial_Analyst&apos;)),
NOT(CONTAINS($Profile.Name, &apos;System Admin&apos;)))</errorConditionFormula>
        <errorMessage>Fund - Advance cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>